# realmir

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliptions.ipynb
benches/: scoring_benchmark.rs
browser/: __init__.py  data_models.py
browser/core/: __init__.py  interfaces.py
browser/examples/: README.md  demo_round_announcement.py
browser/integration_tests/: __init__.py  test_collect_commitments_integration.py
browser/miner/: __init__.py  submit_commitment.py
browser/validator/: __init__.py  announce_round.py  collect_commitments.py
core/: __init__.py  process_round_payouts.py
data/: rounds.json
src/: commitment.rs  config.rs  embedder.rs  error.rs  lib.rs  payout.rs  python_bridge.rs  round.rs  scoring.rs  social.rs  types.rs
tests/: integration_tests.rs  test_round_announcement.py  test_schema_consistency.py
