[package]
name = "cliptions-core"
version = "0.1.0"
edition = "2021"
description = "Cliptions prediction market core functionality implemented in Rust with optional Python bindings"
license = "MIT"
authors = ["Cliptions Team"]
repository = "https://github.com/your-org/cliptions"
keywords = ["prediction-market", "machine-learning", "embeddings", "commitments"]
categories = ["science", "algorithms"]

[lib]
name = "cliptions_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Python bindings feature - enables PyO3 integration
python = ["pyo3"]

[dependencies]
# Python integration (optional)
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"], optional = true }

# Cryptography
sha2 = "0.10.8"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# URL and regex handling
url = "2.5"
regex = "1.10"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Math and arrays
ndarray = "0.16"

# Random number generation
rand = "0.8"

# Image processing
image = { version = "0.25", features = ["png", "jpeg", "webp"] }

# Base64 encoding/decoding
base64 = "0.22"

# Candle ML framework for native CLIP support
candle-core = "0.8.0"
candle-nn = "0.8.0"
candle-transformers = "0.8.0"
tokenizers = "0.21.0"
hf-hub = "0.3.0"

# Parallel processing
rayon = "1.7"

# Argument parsing for CLI tools
clap = { version = "4.0", features = ["derive"] }

# Colored terminal output
colored = "2.0"

# HTTP client for downloading models
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
# Testing
rstest = "0.21"
proptest = "1.0"
tempfile = "3.0"

# Benchmarking
criterion = "0.5"

[[bench]]
name = "scoring_benchmark"
harness = false

[[bin]]
name = "calculate_scores"
path = "src/bin/calculate_scores.rs"

[[bin]]
name = "generate_commitment"
path = "src/bin/generate_commitment.rs"

[[bin]]
name = "process_payouts"
path = "src/bin/process_payouts.rs"

[[bin]]
name = "verify_commitments"
path = "src/bin/verify_commitments.rs"